Pull request #916: feature/AG-8661 fix styles
Merge in EXTENSIONS/browser-extension from feature/AG-8661 to feature/AG-2737

Squashed commit of the following:

commit 19520ad3cfbc942dac697adbccb4c24b23fcfaab
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Fri Jun 18 15:26:05 2021 +0300

    change column padding in filtering event table

commit c59f892307b655f83ed2b07e4367bb3001795250
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Fri Jun 18 15:12:40 2021 +0300

    add invisible space for margin options in select

--- a/Extension/src/pages/filtering-log/components/FilteringEvents/filtering-events.pcss
+++ b/Extension/src/pages/filtering-log/components/FilteringEvents/filtering-events.pcss
@@ -230,7 +230,7 @@
         }
 
         & .th, & .td {
-            padding: 0 25px;
+            padding: 0 10px;
             height: 30px;
             display: inline-block;
             width: 20%;
